src/test/deca/syntax/valid/resultats/test7_strings-lex.res
'{': [@0,383:383='{',<36>,16:0]
'println': [@1,386:392='println',<18>,17:1]
'(': [@2,393:393='(',<34>,17:8]
STRING: [@3,394:402='"Hello 1"',<47>,17:9]
')': [@4,403:403=')',<35>,17:18]
';': [@5,404:404=';',<39>,17:19]
'println': [@6,407:413='println',<18>,18:1]
'(': [@7,414:414='(',<34>,18:8]
STRING: [@8,415:429='"\"\\Hello 2\""',<47>,18:9]
')': [@9,430:430=')',<35>,18:24]
';': [@10,431:431=';',<39>,18:25]
'println': [@11,502:508='println',<18>,20:1]
'(': [@12,509:509='(',<34>,20:8]
STRING: [@13,510:604='"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_~#'{([-|^@)]=}+°$*%?,.;/:§!&<>"',<47>,20:9]
')': [@14,605:605=')',<35>,20:104]
';': [@15,606:606=';',<39>,20:105]
'}': [@16,608:608='}',<37>,21:0]
