src/test/deca/syntax/invalid/resultats/test_hello_basic_tokens1-lex.res
'{': [@0,347:347='{',<36>,14:0]
'print': [@1,349:353='print',<17>,15:0]
'(': [@2,354:354='(',<34>,15:5]
STRING: [@3,355:367='"print() \\ "',<47>,15:6]
',': [@4,368:368=',',<33>,15:19]
STRING: [@5,369:381='"123456879\""',<47>,15:20]
')': [@6,382:382=')',<35>,15:33]
';': [@7,383:383=';',<39>,15:34]
';': [@8,384:384=';',<39>,15:35]
'printx': [@9,386:391='printx',<20>,16:0]
')': [@10,392:392=')',<35>,16:6]
'(': [@11,393:393='(',<34>,16:7]
';': [@12,394:394=';',<39>,16:8]
'println': [@13,438:444='println',<18>,21:0]
'(': [@14,445:445='(',<34>,21:7]
MULTI_LINE_STRING: [@15,446:479='" multiline string \n second line"',<48>,21:8]
')': [@16,480:480=')',<35>,21:42]
';': [@17,481:481=';',<39>,21:43]
'}': [@18,482:482='}',<37>,21:44]
